Fixed bug #80963: DateTimeZone::getTransitions() truncated